# python_homework_unusual_activity_api

./: .gitignore  Makefile  README.org  pyproject.toml
.github/workflows/: build.yml  release.yml
src/unusual_activity/: activity.py  app.py  constants.py  main.py
tests/: conftest.py  test_activity.py  test_main.py
